kubernetes/Extensions/operations-management-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operations-management-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: operations-management-service
  template:
    metadata:
      labels:
        app: operations-management-service
    spec:
      imagePullSecrets:
      - name: ecr-creds
      containers:
      - name: operations-management-service
        image: 915742257373.dkr.ecr.us-east-1.amazonaws.com/operations-management-service:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: operations-service
spec:
  selector:
    app: operations-management-service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort  # 或 ClusterIP/LoadBalancer 视需求而定
